--- a/index.ipynb
+++ b/index.ipynb
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return "
+    "    return travel_destinations[0]"
    ]
   },
   {
