Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_\n",
+    "def favorite_destination:\n",
+    "    \n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
