--- a/index.ipynb
+++ b/index.ipynb
@@ -182,7 +182,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination:\n",
-    "    travel_destinations.append('')\n",
+    "    travel_destinations.append('madagascar')\n",
+    "    return\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
