Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -182,6 +182,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination:\n",
+    "    madagascar = ''\n",
     "    travel_destinations.append('madagascar')\n",
     "    return\n",
     "favorite_destination()\n",
