--- a/index.ipynb
+++ b/index.ipynb
@@ -176,15 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-a0cc3031a972>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-a0cc3031a972>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def favorite_destination:\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination:\n",
-    "    madagascar = ''\n",
-    "    travel_destinations.append('madagascar')\n",
-    "    return\n",
+    "    madagascar = 'madagascar'\n",
+    "    travel_destinations.append(madagascar)\n",
+    "    return madagascar\n",
     "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
