--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination:\n",
+    "def favorite_destination():\n",
     "    madagascar = 'madagascar'\n",
     "    travel_destinations.append(madagascar)\n",
     "    return madagascar\n",
