--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    cap_dests = []\n",
-    "    for i in travel_destinations:"
+    "    for i in travel_destinations:\n",
+    "        cap_dests."
    ]
   },
   {
