Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,7 @@
     "def capitalize_countries():\n",
     "    cap_dests = []\n",
     "    for i in travel_destinations:\n",
-    "        cap_dests."
+    "        cap_dests.append"
    ]
   },
   {
