Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -266,7 +266,8 @@
     "def capitalize_countries():\n",
     "    cap_dests = []\n",
     "    for i in travel_destinations:\n",
-    "        cap_dests.append(i.)"
+    "        cap_dests.append(i.title())\n",
+    "        return cap_des"
    ]
   },
   {
